CSS fixes; inlining stuff; Need to take care of spacing and relative alignment

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body { text-align: center; }
 
 
@@ -5,10 +10,49 @@ tr{
     text-align: center;
 }
 
-.HeaderTable{
-    align-content: center;
-   
+#getbyDate, #getByScore, #getByText, #getarticles{
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
 }
+
+.buttonContainer{
+    display: inline-block;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: wheat;
+}
+
+.inputPanel {
+    display: inline-block;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    background-color: wheat;
+}
+
+.pageHeading{
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    background-color: wheat;
+}
+
 .myDateInput{
-    align-content: center;
+    white-space: nowrap;
+}
+
+.headerAndButtons{
+    display: flex;
+    background-color: burlywood;
+}
+
+.nextpage, .prevpage{
+    display: inline-block;
+    border-radius: 10px;
+    padding: 5px;
+    margin-right: 50px;
+    background-color: wheat;
+    height:50px;
+    width:50px;
 }
